--- a/christmas-night/style.css
+++ b/christmas-night/style.css
@@ -1,18 +1,29 @@
 body {
-    height: 98vh;
-    background-image: linear-gradient(#0c3ea8, #2d7eda, #362b14);
+    background-color: #0e83b1;
 }
 
-.moon {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    background-image: radial-gradient(circle at center, white, rgb(232, 235, 98));
+.container {
+    height: 600px;
+    width: 1100px;
+    background-image: linear-gradient(#0c3ea8, #2d7eda, #bbc0c2);
+    margin: auto;
+    border-radius: 10px;
+    border: 5px solid white;
     position: absolute;
-    left: 1350px;
-    top: 15px;
-    border-left: 50%;
-    box-shadow: inset 15px 0px rgba(119, 119, 119, 0.534);   
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+/* Keyframes : */
+@keyframes shooting-star {
+    100% {
+        top: -1px;
+        left: 275px;
+        height: 0;
+        width: 0;
+    }
 }
 
 @keyframes blink-star {
@@ -20,9 +31,53 @@ body {
       transform: scale(0.9);
       opacity: 0.5;
     }
-  }
+}
 
-  .star {
+@keyframes blink-ball1 {
+    50% {
+        background-color: blue;
+    }
+}
+
+@keyframes blink-ball2 {
+    50% {
+        background-color: green;
+    }
+}
+
+@keyframes blink-ball3 {
+    50% {
+        background-color: red;
+    }
+}
+
+@keyframes blink-ball4 {
+    50% {
+        background-color: blue;
+    }
+}
+
+@keyframes blink-ball5 {
+    50% {
+        background-color: yellow;
+    }
+}
+
+
+/* Sky */
+.moon {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle at center, white, rgb(232, 235, 98));
+    position: absolute;
+    left: 930px;
+    top: 15px;
+    border-left: 50%;
+    box-shadow: inset 10px 0px rgba(119, 119, 119, 0.534);   
+}
+
+.star {
     border-radius: 50px;
     background-color: rgba(255, 251, 246, 0.8);
     animation-name: blink-star;
@@ -41,8 +96,8 @@ body {
 .star2 {
     width: 35px;
     height: 35px;
-    top: 150px;
-    left: 800px;
+    top: 90px;
+    left: 650px;
 }
 
 .star3 {
@@ -56,20 +111,20 @@ body {
     width: 25px;
     height: 25px;
     top: 35px;
-    left: 1000px;
+    left: 900px;
 }
 
 .star5 {
     width: 15px;
     height: 15px;
-    top: 200px;
+    top: 40px;
     left: 200px;
 }
 
 .star6 {
     width: 25px;
     height: 25px;
-    top: 120px;
+    top: 80px;
     left: 450px;
 }
 
@@ -83,30 +138,80 @@ body {
 .star8 {
     width: 15px;
     height: 15px;
-    top: 230px;
-    left: 950px;
+    top: 30px;
+    left: 750px;
 }
 
 .star9 {
     width: 20px;
     height: 20px;
     top: 100px;
-    left: 1250px;
+    left: 850px;
 }
 
 .star10 {
     width: 25px;
     height: 25px;
-    top: 200px;
-    left: 1300px;
+    top: 100px;
+    left: 100px;
 }
 
+/* Shooting star */
+.shooting-star {
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+    animation-name: shooting-star;
+}
+
+.shooting-star1 {
+    top: 150px;
+    left: 120px;
+    height: 15px;
+    width: 5px;
+    transform: skewX(-40deg);
+}
+
+.shooting-star2 {
+    top: 130px;
+    left: 135px;
+    height: 15px;
+    width: 5px;
+    transform: skewX(-40deg);
+}
+
+.shooting-star3 {
+    top: 110px;
+    left: 150px;
+    height: 15px;
+    width: 5px;
+    transform: skewX(-40deg);
+}
+
+.shooting-star4 {
+    top: 90px;
+    left: 165px;
+    height: 15px;
+    width: 5px;
+    transform: skewX(-40deg);
+}
+
+.shooting-star5 {
+    top: 80px;
+    left: 175px;
+    height: 10px;
+    width: 10px;
+}
+
+/* Christmas tree */
 .pedestal {
-    position: fixed;
+    position: absolute;
     height: 60px;
     width: 50px;
-    top: 600px;
-    left: 210px;
+    bottom: 20px;
+    left: 300px;
     border-bottom: 60px solid maroon;
 	border-left: 30px solid transparent;
 	border-right: 30px solid transparent;
@@ -118,9 +223,9 @@ body {
 	border-left: 100px solid transparent;
 	border-right: 100px solid transparent;
     border-bottom: 150px solid rgb(0, 255, 136);
-    position: fixed;
-    left: 170px;
-    top: 510px;
+    position: absolute;
+    left: 255px;
+    bottom: 80px;
 }
 
 .middle-part {
@@ -129,9 +234,9 @@ body {
 	border-left: 90px solid transparent;
 	border-right: 90px solid transparent;
     border-bottom: 120px solid rgb(0, 255, 136);
-    position: fixed;
-    left: 180px;
-    top: 450px;
+    position: absolute;
+    left: 265px;
+    bottom: 170px;
 }
 
 .up-part {
@@ -140,28 +245,117 @@ body {
 	border-left: 70px solid transparent;
 	border-right: 70px solid transparent;
     border-bottom: 90px solid rgb(0, 255, 136);
-    position: fixed;
-    left: 200px;
-    top: 400px;
+    position: absolute;
+    left: 285px;
+    bottom: 245px;
 }
 
-.gift {
+.ball {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+}
+
+.ball1 {
+    background-color: red;
+    margin-top: 35px;
+    margin-left: -15px;
+    animation-name: blink-ball1;   
+}
+
+.ball2 {
+    background-color: blue;
+    margin-left: 20px;
+    margin-top: 60px;
+    animation-name: blink-ball2;   
+}
+
+.ball3 {
+    background-color: yellow;
+    margin-left: -45px;
+    margin-top: 12px;
+    animation-name: blink-ball3;
+}
+
+.ball4 {
+    background-color: green;
+    margin-top: 100px;
+    margin-left: -20px;
+    animation-name: blink-ball4;
+}
+
+.ball5 {
+    background-color: red;
+    margin-left: 30px;
+    animation-name: blink-ball5;
+}
+
+/* Gifts */
+.gift1{
+    height: 40px;
+    width: 100px;
+    background-color: green;
+    position: absolute;
+    bottom: 10px;
+    left: 150px; 
+}
+
+.wrap1 {
+    width: 10px;
+    height: 100%;
+    margin: auto;
+    margin-top: 0px;
+    background-color: red;
+}
+
+.wrap2 {
+    width: 100%;
+    height: 10px;
+    margin-top: -25px;
+    background-color: red;
+}
+
+.node1 {
+    background-color: red;
+    height: 15px;
+    width: 25px;
+    border-radius: 40%;
+    position: absolute;
+    left: 175px;
+    bottom: 50px;
+    transform: skewX(50deg);
+}
+
+.node2 {
+    background-color: red;
+    height: 15px;
+    width: 25px;
+    border-radius: 40%;
+    position: absolute;
+    left: 200px;
+    bottom: 50px;
+    transform: skewX(-50deg);
+}
+
+.gift2 {
     height: 50px;
     width: 70px;
     background-color: red;
-    position: fixed;
-    left: 400px;
-    top: 650px;
+    position: absolute;
+    bottom: 10px;
+    left: 460px;
 }
 
-.ruban1 {
+.wrap3 {
     width: 100%;
     height: 10px;
     margin-top: 20px;
     background-color: blue;
 }
 
-.ruban2 {
+.wrap4 {
     width: 10px;
     height: 100%;
     margin: auto;
@@ -169,52 +363,53 @@ body {
     background-color: blue;
 }
 
-.noeud1 {
+.node3 {
     background-color: blue;
     height: 15px;
     width: 25px;
     border-radius: 40%;
-    position: fixed;
-    left: 410px;
-    top: 635px;
+    position: absolute;
+    left: 470px;
+    bottom: 60px;
     transform: skewX(50deg);
 }
 
-.noeud2 {
+.node4 {
     background-color: blue;
     height: 15px;
     width: 25px;
     border-radius: 40%;
-    position: fixed;
-    left: 440px;
-    top: 635px;
+    position: absolute;
+    left: 495px;
+    bottom: 60px;
     transform: skewX(-50deg);
 }
 
+/* snowman */
 .snowman {
     border-radius: 50%;
     background-color: white;
-    position: fixed;   
+    position: absolute;   
 }
 
 .down {
     width: 100px;
     height: 100px;
-    top: 620px;
+    bottom: 10px;
     left: 800px;
 }
 
 .middle {
     width: 80px;
     height: 80px;
-    top: 570px;
+    bottom: 70px;
     left: 810px;
 }
 
 .head {
     width: 60px;
     height: 60px;
-    top: 535px;
+    bottom: 135px;
     left: 820px;
 }
 
@@ -249,8 +444,8 @@ body {
     height: 10px;
     width: 60px;
     background-color: maroon;
-    position: relative;
-    top: 600px;
+    position: absolute;
+    bottom: 100px;
     left: 760px;
     transform: skewY(-20deg);
 }
@@ -259,8 +454,8 @@ body {
     height: 10px;
     width: 60px;
     background-color: maroon;
-    position: relative;
-    top: 590px;
-    left: 865px;
+    position: absolute;
+    bottom: 100px;
+    left: 880px;
     transform: skewY(20deg);
 }
