--- a/christmas-night/style.css
+++ b/christmas-night/style.css
@@ -7,6 +7,7 @@ body {
     width: 1100px;
     background-image: linear-gradient(#0c3ea8, #2d7eda, #bbc0c2);
     margin: auto;
+    margin-top: 15px;
     border-radius: 10px;
     border: 5px solid white;
     position: absolute;
@@ -458,4 +459,27 @@ body {
     bottom: 100px;
     left: 880px;
     transform: skewY(20deg);
+}
+
+/* Footer */
+.credit-section {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 615px;
+    text-align: center;
+}
+
+.credit-section a {
+    text-decoration: none;
+}
+
+.credit {
+    font-size: 25px;
+    color: #fff;
 }
